Fuck my sort function

--- a/index.html
+++ b/index.html
@@ -1755,6 +1755,195 @@
                         <td>Orange Guide</td>
                         <td>NA</td>
                     </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1006</td>
+                        <td>120</td>
+                        <td>Argon</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1006</td>
+                        <td>120</td>
+                        <td>Argon, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1013</td>
+                        <td>120</td>
+                        <td>Carbon dioxide</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1013</td>
+                        <td>120</td>
+                        <td>Carbon dioxide, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1046</td>
+                        <td>120</td>
+                        <td>Helium</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1046</td>
+                        <td>120</td>
+                        <td>Helium, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1056</td>
+                        <td>120</td>
+                        <td>Krypton</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1056</td>
+                        <td>120</td>
+                        <td>Krypton, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1058</td>
+                        <td>120</td>
+                        <td>Liquefied gases, non-flammable, charged with Nitrogen, Carbon dioxide or Air</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1065</td>
+                        <td>120</td>
+                        <td>Neon</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1065</td>
+                        <td>120</td>
+                        <td>Neon, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1066</td>
+                        <td>120</td>
+                        <td>Nitrogen</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1066</td>
+                        <td>120</td>
+                        <td>Nitrogen, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1845</td>
+                        <td>120</td>
+                        <td>Carbon dioxide, solid</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1845</td>
+                        <td>120</td>
+                        <td>Dry ice</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1913</td>
+                        <td>120</td>
+                        <td>Neon, refrigerated liquid (cryogenic liquid)</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1951</td>
+                        <td>120</td>
+                        <td>Argon, refrigerated liquid (cryogenic liquid)</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1963</td>
+                        <td>120</td>
+                        <td>Helium, refrigerated liquid (cryogenic liquid)</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1970</td>
+                        <td>120</td>
+                        <td>Krypton, refrigerated liquid (cryogenic liquid)</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1977</td>
+                        <td>120</td>
+                        <td>Nitrogen, refrigerated liquid (cryogenic liquid)</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2036</td>
+                        <td>120</td>
+                        <td>Xenon</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2036</td>
+                        <td>120</td>
+                        <td>Xenon, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2187</td>
+                        <td>120</td>
+                        <td>Carbon dioxide, refrigerated liquid</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2591</td>
+                        <td>120</td>
+                        <td>Xenon, refrigerated liquid (cryogenic liquid)</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3136</td>
+                        <td>120</td>
+                        <td>Trifluoromethane, refrigerated liquid</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3158</td>
+                        <td>120</td>
+                        <td>Gas, refrigerated liquid, n.o.s.</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview120() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3538</td>
+                        <td>120</td>
+                        <td>Articles containing non-flammable, non-toxic gas, n.o.s.</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
                     <tr>
                         <td class="custom-clickable-row " id="view-pdf-btn " onclick="preview154() " ; margin: 100px 0 0 80px; " disabled>-----</td>
                         <td class="custom-clickable-row " id="view-pdf-btn " onclick="preview154() " ; margin: 100px 0 0 80px; " disabled>154</td>
@@ -1806,7 +1995,7 @@
 <script>
     function sortTable(n) {
         var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-        table = document.getElementById("myTable");
+        table = document.getElementById("myTable ");
         switching = true;
         dir = "asc ";
         while (switching) {
@@ -1814,8 +2003,8 @@
             rows = table.rows;
             for (i = 1; i < (rows.length - 1); i++) {
                 shouldSwitch = false;
-                x = rows[i].getElementsByTagName("TD")[n];
-                y = rows[i + 1].getElementsByTagName("TD")[n];
+                x = rows[i].getElementsByTagName("TD ")[n];
+                y = rows[i + 1].getElementsByTagName("TD ")[n];
                 if (dir == "asc ") {
                     if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
                         shouldSwitch = true;
