122 and fixed sort finally

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="../assets/js/table.js"></script>
     <script type="text/javascript" src="../assets/js/index.js"></script>
     <script type="text/javascript" src="../assets/js/search.js"></script>
+    <script type="text/javascript" src="../assets/js/order.js"></script>
 
     <style>
         #container {
@@ -1944,6 +1945,111 @@
                         <td>Orange Guide</td>
                         <td>NA</td>
                     </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1002</td>
+                        <td>122</td>
+                        <td>Air, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1003</td>
+                        <td>122</td>
+                        <td>Air, refrigerated liquid (cryogenic liquid)</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1014</td>
+                        <td>122</td>
+                        <td>Carbon dioxide and Oxygen mixture, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1014</td>
+                        <td>122</td>
+                        <td>Oxygen and Carbon dioxide mixture, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1070</td>
+                        <td>122</td>
+                        <td>Nitrous oxide</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1070</td>
+                        <td>122</td>
+                        <td>Nitrous oxide, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1072</td>
+                        <td>122</td>
+                        <td>Oxygen</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1072</td>
+                        <td>122</td>
+                        <td>Oxygen, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1073</td>
+                        <td>122</td>
+                        <td>Oxygen, refrigerated liquid (cryogenic liquid)</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2201</td>
+                        <td>122</td>
+                        <td>Nitrous oxide, refrigerated liquid</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2451</td>
+                        <td>122</td>
+                        <td>Nitrogen trifluoride</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2451</td>
+                        <td>122</td>
+                        <td>Nitrogen trifluoride, compressed</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3156</td>
+                        <td>122</td>
+                        <td>Compressed gas, oxidizing, n.o.s.</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3157</td>
+                        <td>122</td>
+                        <td>Liquefied gas, oxidizing, n.o.s.</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview122() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3311</td>
+                        <td>122</td>
+                        <td>Gas, refrigerated liquid, oxidizing, n.o.s.</td>
+                        <td>Orange Guide</td>
+                        <td>NA</td>
+                    </tr>
                     <tr>
                         <td class="custom-clickable-row " id="view-pdf-btn " onclick="preview154() " ; margin: 100px 0 0 80px; " disabled>-----</td>
                         <td class="custom-clickable-row " id="view-pdf-btn " onclick="preview154() " ; margin: 100px 0 0 80px; " disabled>154</td>
@@ -1992,43 +2098,5 @@
     }
 </script>
 
-<script>
-    function sortTable(n) {
-        var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-        table = document.getElementById("myTable ");
-        switching = true;
-        dir = "asc ";
-        while (switching) {
-            switching = false;
-            rows = table.rows;
-            for (i = 1; i < (rows.length - 1); i++) {
-                shouldSwitch = false;
-                x = rows[i].getElementsByTagName("TD ")[n];
-                y = rows[i + 1].getElementsByTagName("TD ")[n];
-                if (dir == "asc ") {
-                    if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
-                        shouldSwitch = true;
-                        break;
-                    }
-                } else if (dir == "desc ") {
-                    if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
-                        shouldSwitch = true;
-                        break;
-                    }
-                }
-            }
-            if (shouldSwitch) {
-                rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-                switching = true;
-                switchcount++;
-            } else {
-                if (switchcount == 0 && dir == "asc ") {
-                    dir = "desc ";
-                    switching = true;
-                }
-            }
-        }
-    }
-</script>
 
 </html>
